adicionado imagens das arvores reais

--- a/index.html
+++ b/index.html
@@ -11,15 +11,13 @@
     />
     <title>Agrofloresta</title>
   </head>
-  <body> 
-    <div class="container text-center mt-5">
-        <div>
-          <h1 class="lead display-3">Árvore</h1>
-          <input type="text" id="search" placeholder="Digite o nome da árvore">
-        </div>
-        <div id="cartas">
-
-        </div>
+  <body>
+    <div class="container text-center">
+      <div>
+        <h1 class="lead display-3">Árvore</h1>
+        <input type="text" id="search" placeholder="Digite o nome da árvore" />
+      </div>
+      <div id="cartas" class=""></div>
     </div>
 
     <script src="app.js"></script>
